# Modero

./: .gitignore  GEMINI.md  mypy.ini  pyproject.toml  requirements.txt
.history/: .env_20251210124739.example  .env_20251210125808.example
alembic/: env.py
alembic/versions/: 81bc6e2287c6_initial_tables.py
docs/analysis/: documentation_implementation_gap_analysis.md
docs/architecture/: 01C-01_family_classification.md  01C-02_nfr_profile.md  01D-01_tech_candidates.md  02D-01_tech_stack_decision.md
docs/blueprint/: 07B-01_project_blueprint.md  07B-02_frontend_blueprint.md
docs/checklist/:  09L-09_task_009_checklist.md  09L-01_task_001_checklist.md  09L-02_task_002_checklist.md  09L-03_task_003_checklist.md  09L-04_task_004_checklist.md  09L-05_task_005_checklist.md  09L-06_task_006_checklist.md  09L-07_task_007_checklist.md  09L-08_task_008_checklist.md  09L-09_task_009_checklist.md  09L-10_task_010_checklist.md  09L-11_task_011_checklist.md
docs/dna-system/: 04B-01_dna_logging.md  04B-02_dna_websocket.md  04B-03_dna_config.md  04B-04_dna_security.md  04B-05_dna_data.md
docs/standards/: 06D-01_project_standards.md  06S-02_frontend_standards.md
docs/tasks/: 08T-01_task_breakdown.md  08T-02_frontend_task_breakdown.md
src/: main.py
src/api/: dependencies.py
src/api/routes/: rooms.py  (+1 more)
src/core/: prompts.py
src/domain/: models.py
tests/: conftest.py
tests/api/: test_rooms.py  test_websocket.py
tests/core/: test_foundation.py
tests/domain/: test_audio_service.py  test_models.py  test_orchestrator.py
tests/e2e/: test_meeting_flow.py
(+38 files in other folders)
