[project]
name = "modero"
version = "0.1.0"
description = "Modero - Real-time AI Application"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.124.0",
    "uvicorn[standard]==0.38.0",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest==9.0.2",
    "pytest-asyncio>=1.0.0",
]
